# 0.17.0 (2020-XX-XX)

  * (margin) m[xy]0(25|5)
  * (border) .bc-XY -> .border-XY
  * (border) add sat, lum, alpha swatches
  * (variables) drop black, white 95-0125
  * (type) --text-decoration-thickness
  * (type) letter-spacing .lsh, .lsd
  * (type) line-height add .lh6 and .rlh6
  * (type) update headings font-size
  * (cursor) add text
  * (overflow) add clip
  * (div) --border-width, --border-color
  * (copy) depreciate global variables
  * (ellipsis) module init

# 0.16.2 (2020-04-26)

  * (inset) move from utils to modules

# 0.16.1 (2020-04-21)

  * (border) fix --border-width, --border-color
  * (div) depreciate --div-width, --div-color

# 0.16.0 (2020-04-07)

  * (type) .rlh root-line-height
  * (border) --border-width, --border-color update
  * (div) --div-width, --div-color
  * (grid) .justify-evenly
  * (visibility) fix .o05 -> .o5
  * (position) .inset
  * (color) gray hsla color
  * (color) .sat(0-100), .lum(0-100), .alpha(0-100) swatches
  * (background) gray hsla color
  * (background) .bg-sat(0-100), .bg-lum(0-100), .bg-alpha(0-100) swatches
  * (copy) children update
  * (overflow) init
  * (fit) init module
  * (variables) drop --bold-fw

# 0.15.1 (2020-02-05)

  * (grid) add .vw100, .vh100
  * (border) border-radius, border-color vars update
  * rebuild with abrusco cli 0.7.0

# 0.15.0 (2020-01-20)

  * (variables) change --base-xy to --default-xy
  * (color) remove .color-{colorName} -> .{colorName}
  * (grid) un-depreciate .minvh, .maxw, .maxh
  * (grid) add .minvw
  * (grid) remove .min100vh, .min100vw, .maxw100, .maxh100
  * remove depreciated styles

# 0.14.0 (2020-12-01)

  * (position) add object-fit classes
  * (type) white-space
  * (type) overflow-wrap: break-word;
  * (color) add .color-{colorName} -> .{colorName}
  * (color) fix .color-currentColor -> .color-current

# 0.13.2 (2020-11-19)

  * (background) add .bg-current
  * (color) add .color-current
  * (variables) remove --link-color