@@ -14,16 +14,31 @@
   color: transparent;
 }
 
-.black { color: var(--black); }
+.black {
+  --hue: var(--black-hue);
+  --sat: var(--black-sat);
+  --lum: var(--black-lum);
+  --color: var(--black, hsla(var(--hue) var(--sat) var(--lum) / var(--alpha)));
+}
 
-.white { color: var(--white); }
+.white {
+  --hue: var(--white-hue);
+  --sat: var(--white-sat);
+  --lum: var(--white-lum);
+  --color: var(--white, hsla(var(--hue) var(--sat) var(--lum) / var(--alpha)));
+}
 
 .gray {
   --hue: var(--gray-hue);
   --sat: var(--gray-sat);
   --lum: var(--gray-lum);
+  --color: var(--gray, hsla(var(--hue) var(--sat) var(--lum) / var(--alpha)));
+}
+
+.black,
+.white,
+.gray {
   --alpha: 100%;
-  --color: hsla(var(--hue) var(--sat) var(--lum) / var(--alpha));
   color: var(--color);
 }
 
