@@ -1,5 +1,6 @@
 # 0.17.0 (2020-XX-XX)
 
+  * (color) black, white as hsla
   * (margin) m[xy]0(25|5)
   * (border) .bc-XY -> .border-XY
   * (border) add sat, lum, alpha swatches
